[feat] 使用Qdrant来向量化处理，测试通过

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -64,3 +64,11 @@ RETRY_INTERVAL=600
 # 日志配置
 LOG_FILE_MAX_SIZE=50MB
 LOG_BACKUP_COUNT=10
+
+# Qdrant向量数据库配置
+QDRANT_HOST=ip
+QDRANT_PORT=6333
+QDRANT_USE_HTTPS=false
+QDRANT_API_KEY=
+QDRANT_COLLECTION_NAME=document_analysis
+QDRANT_VECTOR_SIZE=1536
