--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,8 @@ sqlalchemy==2.0.23
 # LangChain相关
 langchain==0.0.335
 langchain-community==0.0.6
-chromadb==0.4.17
+# 移除chromadb依赖冲突
+# chromadb==0.4.17
 
 # 通义千问
 dashscope==1.14.1
@@ -32,7 +33,5 @@ requests==2.31.0
 pytest==7.4.3
 black==23.11.0 
 
-# 在现有依赖基础上添加
-qdrant-client==1.7.0
-# 移除或注释掉 chromadb 相关依赖
-# chromadb==0.4.15 
+# Qdrant向量数据库
+qdrant-client==1.7.0 
