[feat] 支持上传文件到腾讯云COS中

--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -43,6 +43,13 @@ MAX_FILE_SIZE=100MB
 UPLOAD_DIRECTORY=./uploads
 VECTOR_DB_DIRECTORY=./vector_db
 
+# 文件存储配置
+FILE_STORAGE_TYPE=cos  # local 或 cos
+TENCENT_SECRET_ID=your-tencent-secret-id
+TENCENT_SECRET_KEY=your-tencent-secret-key
+TENCENT_COS_REGION=ap-beijing
+TENCENT_COS_BUCKET=pdfrag
+
 # 缓存配置
 CACHE_TTL=7200
 SEARCH_CACHE_TTL=3600
