--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "build:prod": "vue-tsc && vite build --mode production",
+    "preview": "vite preview --host 0.0.0.0 --port 3000",
+    "preview:prod": "vite preview --mode production --port 3000 --host 0.0.0.0",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "clean": "rm -rf dist",
+    "deploy": "npm run build && pm2 restart pdf-frontend || pm2 start ecosystem.config.js",
+    "serve": "npm run preview:prod",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop pdf-frontend",
+    "pm2:restart": "pm2 restart pdf-frontend",
+    "pm2:delete": "pm2 delete pdf-frontend",
+    "pm2:logs": "pm2 logs pdf-frontend"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
