[feat] 线上前端部署

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
     "preview:prod": "vite preview --mode production --port 3000 --host 0.0.0.0",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "clean": "rm -rf dist",
-    "deploy": "npm run build && pm2 restart pdf-frontend || pm2 start ecosystem.config.js",
+    "deploy": "npm run build && npm run pm2:restart",
     "serve": "npm run preview:prod",
-    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop pdf-frontend",
-    "pm2:restart": "pm2 restart pdf-frontend",
+    "pm2:restart": "pm2 restart pdf-frontend || pm2 start ecosystem.config.js",
     "pm2:delete": "pm2 delete pdf-frontend",
     "pm2:logs": "pm2 logs pdf-frontend"
   },
