--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:check": "vue-tsc && vite build",
-    "build:prod": "vue-tsc && vite build --mode production",
     "preview": "vite preview --host 0.0.0.0 --port 3000",
-    "preview:prod": "vite preview --mode production --port 3000 --host 0.0.0.0",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "clean": "rm -rf dist",
-    "deploy": "npm run build && npm run pm2:restart",
-    "serve": "npm run preview:prod",
-    "pm2:start": "pm2 start ecosystem.config.js",
+    "deploy": "npm run build && npm run pm2:start",
+    "pm2:start": "pm2 delete pdf-frontend 2>/dev/null || true && pm2 start npm --name pdf-frontend -- run preview",
     "pm2:stop": "pm2 stop pdf-frontend",
-    "pm2:restart": "pm2 restart pdf-frontend || pm2 start ecosystem.config.js",
-    "pm2:delete": "pm2 delete pdf-frontend",
+    "pm2:restart": "pm2 restart pdf-frontend",
     "pm2:logs": "pm2 logs pdf-frontend"
   },
   "dependencies": {
