[feat] nginx部署，通过域名访问

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
-# 生产环境配置
-VITE_API_BASE_URL=https://www.tongliaouniverse.cn/pdf-api/api/v1
+# frontend/.env.production  
+VITE_API_BASE_URL=/pdf-api/api/v1
 VITE_APP_BASE_URL=/pdf/
 VITE_APP_TITLE=PDF文献分析智能体
 VITE_APP_VERSION=1.0.0
