[feat] 修改pg数据库名称

--- a/backend/.env.development.example
+++ b/backend/.env.development.example
@@ -6,9 +6,9 @@ LOG_LEVEL=INFO
 ENVIRONMENT=development
 
 # 数据库配置 - SQLite开发环境
-DATABASE_URL=sqlite:///./document_analysis.db
+DATABASE_URL=sqlite:///./pdf_analysis.db
 DB_TYPE=sqlite
-DB_NAME=document_analysis.db
+DB_NAME=pdf_analysis.db
 
 # 连接池配置（SQLite不需要，但保持兼容性）
 DB_POOL_SIZE=5
@@ -86,5 +86,5 @@ QDRANT_HOST=ip
 QDRANT_PORT=6333
 QDRANT_USE_HTTPS=false
 QDRANT_API_KEY=
-QDRANT_COLLECTION_NAME=document_analysis
+QDRANT_COLLECTION_NAME=pdf_analysis
 QDRANT_VECTOR_SIZE=1536
