--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -6,11 +6,11 @@ LOG_LEVEL=INFO
 ENVIRONMENT=production
 
 # 数据库配置 - PostgreSQL生产环境
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/document_analysis
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/pdf_analysis
 DB_TYPE=postgresql
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=document_analysis
+DB_NAME=pdf_analysis
 DB_USER=postgres
 DB_PASSWORD=postgres
 
@@ -77,5 +77,5 @@ QDRANT_HOST=ip
 QDRANT_PORT=6333
 QDRANT_USE_HTTPS=false
 QDRANT_API_KEY=
-QDRANT_COLLECTION_NAME=document_analysis
+QDRANT_COLLECTION_NAME=pdf_analysis
 QDRANT_VECTOR_SIZE=1536
